<resources>
    <string name="app_name">tugas2</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="upn_veteran_jawa_timur">UPN "Veteran" Jawa Timur</string>
    <string name="image1">img1</string>
    <string name="e_learning">E-Learning</string>
    <string name="farid_chilmi_18082010017">©Farid Chilmi_18082010017</string>
    <string name="login">LOGIN</string>
</resources>